--- a/drop-in/src/main/res/values-nb/strings.xml
+++ b/drop-in/src/main/res/values-nb/strings.xml
@@ -78,6 +78,7 @@
     <string name="firstNameErrorRequired">Fornavn er obligatorisk</string>
     <!-- The billing address First name container view label -->
     <string name="firstNameLabel">Fornavn</string>
+    <string name="form_error_card_holder_name_length">Navnet må være mellom 2 og 45 tegn</string>
     <string name="form_error_card_type_not_supported">Korttype ikke støttet</string>
     <string name="form_error_invalid">%1$s er ugyldig</string>
     <string name="form_error_required">%1$s er påkrevd</string>
