--- a/drop-in/src/main/res/values-pl/strings.xml
+++ b/drop-in/src/main/res/values-pl/strings.xml
@@ -78,6 +78,7 @@
     <string name="firstNameErrorRequired">Imię jest wymagane</string>
     <!-- The billing address First name container view label -->
     <string name="firstNameLabel">Imię</string>
+    <string name="form_error_card_holder_name_length">Nazwa musi zawierać od 2 do 45 znaków</string>
     <string name="form_error_card_type_not_supported">Nieobsługiwane typy kart</string>
     <string name="form_error_invalid">%1$s jest nieprawidłowe</string>
     <string name="form_error_required">Wymagane jest %1$s</string>
