--- a/drop-in/src/main/res/values/strings.xml
+++ b/drop-in/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="form_error_required">%1$s is required</string>
     <string name="form_error_invalid">%1$s is invalid</string>
     <string name="form_error_card_type_not_supported">Unsupported card type</string>
+    <string name="form_error_card_holder_name_length">Name must have between 2 and 45 characters</string>
     <string name="payment_method_error">Choose another payment method</string>
     <string name="confirm_dd_mandate">Confirm mandate</string>
     <string name="name">Name</string>
