--- a/tooling/translation/phrase_config.yml
+++ b/tooling/translation/phrase_config.yml
@@ -368,3 +368,12 @@
           encoding: UTF-8
           include_empty_translations: true
           fallback_locale_id: en
+
+      - file: ./drop-in/src/main/res/values-ru/strings.xml
+        params:
+          locale_id: Russian
+          file_format: xml
+          tags: android-sdk
+          encoding: UTF-8
+          include_empty_translations: true
+          fallback_locale_id: en
